# bsp-viewer

./: CMakeLists.txt  LICENSE  README.md  app.c  app.h  arena.h  bsp.c  bsp.h  bufio.c  bufio.h  error.h  exit.h  file.c  file.h  gl.h  load_gl.c  log.c  log.h  main.c  platform.h  shader.c  shader.h  string.c  string.h  time.h
linux/: error.c  exit.c  file.c  file.h  platform.h  syscall.h  time.c
linux/amd64/: error.c  file.h  platform.h  syscall.h
shaders/: vertex.glsl
win32/: error.c  platform.h  time.c
winlib/: CMakeLists.txt
winlib/include/winlib/: app.h  assert.h  bool.h  bufio.h  camera.h  error.h  exit.h  file.h  gl.h  io_result.h  log.h  math.h  matrix.h  offsetof.h  platform.h  shader.h  string.h  time.h  varg.h
winlib/include/winlib/linux/: file.h  platform.h  syscall.h
winlib/include/winlib/linux/amd64/: file.h  platform.h  syscall.h
winlib/include/winlib/win32/: platform.h
winlib/src/: bufio.c  camera.c  file.c  load_gl.c  matrix.c  shader.c  string.c
winlib/src/amd64/: cos.s  memcpy.s  memset.s  sin.s  sqrt.s  tan.s
winlib/src/linux/: error.c  exit.c  file.c  main.c  time.c
winlib/src/win32/: error.c  exit.c  file.c  main.c
